Organizacion de las carpetas para tener las dos implementaciones

--- a/ar-food/public/index.html
+++ b/ar-food/public/index.html
@@ -25,6 +25,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+  <!--script de aframe-->
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  <!--Script de ARjs
+    <script src="https://cdn.jsdelivr.net/gh/jeromeetienne/ar.js/aframe/build/aframe-ar.min.js"></script>
+  segundo script de ARjs
+    <script src="https://cdn.rawgit.com/jeromeetienne/ar.js/2.0.1/aframe/build/aframe-ar.min.js"></script>-->
+    <!--<script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>-->
+    <script src="https://rawgit.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
+    <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
